# LPV

./: LICENSE  README.md  pyproject.toml
01-firt-app/: pyproject.toml
01-firt-app/src/: app.py
02-basic-widgets/: pyproject.toml
02-basic-widgets/src/: app.py
03-create-custom-window/: pyproject.toml
03-create-custom-window/src/: app.py  myWindow.py
04-signals-and-slots/: pyproject.toml
04-signals-and-slots/src/: app.py
05-layouts/: pyproject.toml
05-layouts/src/: app.py
06-toolbar-and-menu/: pyproject.toml
06-toolbar-and-menu/src/: app.py
07-big-example/: pyproject.toml
07-big-example/src/: app.py
1.clima/: main.py  pyproject.toml
1.clima/docs/: open_meteo.py
1.clima/src/: __init__.py  clima.py
mySumoSimulation/: main.py  pyproject.toml
mySumoSimulation/src/: constants.py
mySumoSimulation/src/components/: motor.py  sensorDeEnemigo.py  sensorDeLinea.py
src/: main.py
test/: pyproject.toml
test/src/: app.py  layout_ledsquare.py
