[project]
name = "03-create-custom-window"
version = "0.1.0"
description = ""
authors = [
    {name = "carlobeni04",email = "carlosbenitez.dev.acct@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.10.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
