[project]
name = "clima"
version = "0.1.0"
description = "Proyecto Tarea de Lenguajes de Programación Visual que consiste en obtener el clima a través de una API, procesarla en el formato que se requiere y guardarla con los métodos aplicando las prácticas de programación orientada a objetos"
authors = [
    {name = "tetotille",email = "jltilleriam@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "openmeteo-requests (>=1.7.5,<2.0.0)",
    "requests-cache (>=1.3.0,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "1"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
